Fix mobile view wrapping on about

--- a/static/style.css
+++ b/static/style.css
@@ -134,6 +134,7 @@ button {
 
 .sidebyside {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
